--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/palindrome
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/palindrome
+#DATABASE_URL=postgresql://postgres:postgres@postgres:5432/palindrome
